examples/test/testpolicy4670.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4670
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key14: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value6
          key47: value48
          key38: value18
      podSelector:
        matchLabels:
          key23: value15
          key6: value12
